syntax = "proto3";

package reservations;

import "common.proto";

service ReservationsService {
  rpc GetReservations(GetReservationsRequest) returns (GetReservationsResponse);
  rpc CreateReservation(CreateReservationRequest) returns (Reservation);
  rpc DeleteReservation(common.DeleteEntityRequest) returns (common.Empty);
}

enum ReservationStatus {
  CONFIRMED = 0;
  CANCELLED = 1;
}

message Reservation {
  int32 id = 1;
  string userId = 2;
  string reservationDate = 3; // ISO date string
  ReservationStatus status = 4;
  optional string createdAt = 5; // ISO datetime string
  optional string updatedAt = 6; // ISO datetime string
  repeated ReservationSlot slots = 7;
}

message ReservationSlot {
  int32 reservationId = 1;
  int32 slotId = 2;
}

message CreateReservationRequest {
  string reservationDate = 2; // ISO date string
  repeated int32 slotIds = 3;
}

message GetReservationsRequest {
  optional common.PaginationRequest pagination = 1;
  optional string userId = 2;
  optional string reservationDate = 3;
  optional ReservationStatus status = 4;
}

message GetReservationsResponse {
  repeated Reservation items = 1;
  int32 total = 2;
}